--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -54,8 +54,8 @@
       }
       {Development of HDFS metadata indexing hub (proprietary solution akin to \href{https://egeria.odpi.org}{egeria}).
         Product I work on has service oriented architecture build on the top of
-        Elasticsearch. It allows datascientists to search for any data that exists
-        within Nordea's datalake.
+        Elasticsearch. It allows data scientists to search for any data that exists
+        within Nordea's data lake.
         Please find some of my achievements below:
         \begin{missions}
         \item I've introduced and teached internal workers modern FP architecture
@@ -69,15 +69,15 @@
       {\href{https://www.intel.com/content/www/us/en/jobs/locations/poland.html}{Intel Technology Poland}}
       {07.2018 - 06.2019\\Gdańsk, Poland}
       {compilers, shapeless,\\scala-macros, fs2, zio,\\monocle, scalaz,\\antlr4, sbt}
-      {Work for pre-silicon group under Intel Network Division (before aquisition it was Fulcrum Microsystems from Caltech).
+      {Work for pre-silicon group under Intel Network Division (before acquisition it was Fulcrum Microsystems from Caltech).
         Essentially, company hired me to develop scala simulation model for next generation ethernet switch.
-        Due to the requirements change within organisation, this activity was abandoned.
-        Since Network Division group lacked good, modern compiler support for presilicon memory design activities, we decided to focus on
+        Due to the requirements change within organization, this activity was abandoned.
+        Since Network Division group lacked good, modern compiler support for pre-silicon memory design activities, we decided to focus on
         \href{https://www.accellera.org/downloads/standards/systemrdl}{SystemRDL 1.0} (SRDL) compiler development.
         Here are some of my key achievements:
         \begin{missions}
         \item I've developed probably first fully compliant, built-in SRDL1.0 preprocessor
-        \item Redefined SRDL1.0 grammar (official one had bugs)
+        \item Redefined SRDL1.0 grammar
         \item Designed and implemented purely functional memory model for next-gen Intel's ethernet switch simulator
         \end{missions}
       }
@@ -87,7 +87,7 @@
       {March - June, 2018\\Gdańsk, Poland}
       {java, spark, docker,\\java-testcontainers}
       {I have joined the team responsible for Market Liquidity Credit Risk (MLQR) app development.
-        MLQR was internal, proprietary application, which main activity was calulating daily - executed as batch job - credit risk coefficient values.
+        MLQR was internal, proprietary application, which main activity was calculating daily - executed as batch job - credit risk coefficient values.
         Please find below some of my duties \& achievements:
         \begin{missions}
         \item Developed local spark deployment of ETL job for test configuration
@@ -100,7 +100,7 @@
       {scala, akka-streams,\\graphql, cassandra,\\kafka, play, mtl,\\flink, marathon}
       {For the vast majority of time spend at Scalac, my contribution was related with Qvantel - a Finnish business solution systems provider for telco companies.
         As a Scalac, we developed for Qvantel several microservices, mostly responsible for ETL jobs (messages transformation and ingestion).
-        Scallable apps developed Qvantel were deployed on emerging markets like Bolivia, Equador or Honduras. For one of them we satisfied client's constraint
+        Scalable apps developed Qvantel were deployed on emerging markets like Bolivia, Equador or Honduras. For one of them we satisfied client's constraint
         to process \approx12k messages per second. Next, the team was asked to develop proof-of-concept application utilizing graphQL approach in order to get
         rid of plenty RESTful services and improve Qvantel's business. Please find more about this cooperation under \emph{Publications / public speeches} section.
       }
