Add oracle & tomee to nordea.

--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -85,7 +85,7 @@
 \story{senior java developer}
       {\href{https://diversecg.pl/}{DCG} (under contract to Nordea Capital Markets)}
       {March - June, 2018\\Gdańsk, Poland}
-      {java, spark, docker,\\java-testcontainers}
+      {java, spark, docker,\\java-testcontainers,\\oracle, tomee}
       {I have joined the team responsible for Market Liquidity Credit Risk (MLQR) app development.
         MLQR was internal, proprietary application, which main activity was calculating daily - executed as batch job - credit risk coefficient values.
         Please find below some of my duties \& achievements:
