--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -86,9 +86,9 @@
       {\href{https://diversecg.pl/}{DCG} (under contract to Nordea Capital Markets)}
       {March - June, 2018\\Gdańsk, Poland}
       {java, spark, docker,\\java-testcontainers,\\oracle, tomee}
-      {I have joined the team responsible for Market Liquidity Credit Risk (MLQR) app development.
-        MLQR was internal, proprietary application, which main activity was calculating daily - executed as batch job - credit risk coefficient values.
-        Please find below some of my duties \& achievements:
+      {Market Liquidity Credit Risk (MLQR) application development. It was an internal,
+        proprietary product, responsible for calculating daily credit risk
+        coefficient values.
         \begin{missions}
         \item Developed local spark deployment of ETL job for test configuration
         \item Code reviews \& bug fixing
