Fix Ecuador typo.

--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -100,7 +100,7 @@
       {scala, akka-streams,\\graphql, cassandra,\\kafka, play, mtl,\\flink, marathon}
       {For the vast majority of time spend at Scalac, my contribution was related with Qvantel - a Finnish business solution systems provider for telco companies.
         As a Scalac, we developed for Qvantel several microservices, mostly responsible for ETL jobs (messages transformation and ingestion).
-        Scalable apps developed for Qvantel were deployed on emerging markets like Bolivia, Equador or Honduras. For one of them we satisfied client's constraint
+        Scalable apps developed for Qvantel were deployed on emerging markets like Bolivia, Ecuador or Honduras. For one of them we satisfied client's constraint
         to process \approx12k messages per second. Next, the team was asked to develop proof-of-concept application utilizing GraphQL approach in order to get
         rid of plenty RESTful services and improve Qvantel's business. Please find more about this cooperation under \emph{Publications / public speeches} section.
       }
