--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -50,7 +50,7 @@
 \story{scala developer}
       {\href{https://www.jit.team}{Jit Team} (under contract to Nordea Poland)}
       {since 07.2019\\Gdynia, Poland}
-      {scala, cats, http4s,\\shapeless, tagless-final,\\fs2, bazel, nix, kafka,\\elasticsearch,\\microservices,\\postgres
+      {scala, cats, http4s,\\shapeless, tagless-final,\\fs2, bazel, nix, kafka,\\elasticsearch,\\microservices,\\kubernetes,\\postgres
       }
       {Development of HDFS metadata indexing hub (proprietary solution akin to \href{https://egeria.odpi.org}{egeria}).
         Product I work on has service oriented architecture build on the top of
@@ -109,15 +109,14 @@
       {\href{https://www.intel.com/content/www/us/en/jobs/locations/poland.html}
         {Intel Technology Poland}}
       {2014 - 2017\\Gdańsk, Poland}
-      {java ee, c\#, c++11,\\gradle, docker,\\nodejs, bash}
+      {java ee, c\#, c++11,\\gradle, docker,\\orientdb, postgres,\\nodejs, bash}
       {The company was looking for experienced validation engineer for newly formed \href{https://www.intel.com/intelRSD}{Rackscale Design (RSD)} team.
         My duties were to develop high quality testing libraries and provide mentorship for other team members.
         After some time I've joined development teams. Firstly, to help with firmware code, especially to model LVM system under firmware component.
         Later, I joined development team of
         \href{https://www.intel.com/content/www/us/en/architecture-and-technology/rack-scale-design/pod-manager-user-guide-v2-1.html}{POD Manager} component,
         where I spend most of my time at Intel. I've been developing RESTful web service, responsible for assembly and system composition of Intel's RSD. 
-        Some of my work can still be found at github \emph{\href{https://github.com/intel/intelRSD}{intel/intelRSD}}.
-        Below are some of my key achievements:
+        Some of my work can still be found at github \emph{\href{https://github.com/intel/intelRSD}{intel/intelRSD}}. Below are some of my key achievements:
         \begin{missions}
         \item I've developed most of testing code \& libraries (\textasciitilde50\% of commits were mine)
         \item Implemented PODManager composition logic
@@ -127,33 +126,35 @@
 %----------------------------------------------------------------------------
 \story{software engineer}{\href{https://www.finastra.com/}{Misys}}
       {2012 - 2014\\Gdynia, Poland}
-      {c++, c, java,\\groovy, bash}
-      {I've joined Misys to support Kondor+ product development.
-        Apart from that, I've done some work around other products related to Kondor+
-        like MarkitWire adapter, which gave customers ability to use Kondor+ together
-        with Markit stack. I have also fixed several performance issues within Kondor+ product.
+      {c++, c, stl, boost,\\java, groovy, bash,\\sybase, rendezvous}
+      {Development of Kondor+, a market-leading trade and risk management platform,
+        allowing users to manage global trading activities. Kondor+ has the broadest
+        installed base worldwide with more than 450 sites in 67 countries.
+        \begin{missions}
+        \item Fixed several performance issues
+        \item MarkitWire adapter development
+        \end{missions}
       }
 %----------------------------------------------------------------------------
 \story{software engineer}
       {\href{https://sii.pl/en/}{SII} (under contract to Intel Technology Poland)}
       {2011 - 2012\\Gdańsk, Poland}
       {c\#, tcl,\\python, bash}
-      {I was hired to external team working for Intel Technology Poland. The team
-        took over responsibility for \href{https://en.wikipedia.org/wiki/Mdadm}{\emph{mdadm}}
-        validation, where Intel made support for their metadata. Later on I was
-        responsible for Intel's iSCSI driver validation. Please find below some
-        of my key achievements:
+      {Rapid Storage Technology Enterprise validation. The team I joined took over the  responsibility
+        for \href{https://en.wikipedia.org/wiki/Mdadm}{\emph{mdadm}} validation, where Intel
+        made support for their metadata. Later on I was responsible for Intel's iSCSI driver validation.
+        Please find below some of my key achievements:
         \begin{missions}
         \item Implemented python-based testing framework for CIM RAID interface
-        \item Developed dozen of mdadm tests
         \item Developed C\# library for storage discovery
+        \item Developed dozen of mdadm tests
         \end{missions}
       }
 %----------------------------------------------------------------------------
 \story{software engineer}{\href{https://micromade.pl}{Micromade}}
       {2010 - 2011\\Gdańsk, Poland}
       {c++, c, vcl}
-      {At Micromade I was responsible for implementing brand new user interface of `bibinet` application.
+      {At Micromade, I was responsible for implementing brand new user interface of `bibinet` application.
         It is a management software for their well known product for work time tracking and access control.
       }
 %----------------------------------------------------------------------------
