Fix start-end dates and 'taught' mistake...

--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -49,7 +49,7 @@
 %----------------------------------------------------------------------------
 \story{scala developer}
       {\href{https://www.jit.team}{Jit Team} (under contract to Nordea Poland)}
-      {since 07.2019\\Gdynia, Poland}
+      {07.2019 - 05.2020\\Gdynia, Poland}
       {scala, cats, http4s,\\shapeless, tagless-final,\\fs2, bazel, nix, kafka,\\elasticsearch,\\microservices,\\kubernetes,\\postgres
       }
       {Development of HDFS metadata indexing hub (proprietary solution akin to \href{https://egeria.odpi.org}{egeria}).
@@ -58,7 +58,7 @@
         within Nordea's data lake.
         Please find some of my achievements below:
         \begin{missions}
-        \item I've introduced and teached internal workers modern FP architecture
+        \item I've introduced and taught internal workers modern FP architecture
         \item I've unified technology stack into more FP oriented one
         \item Implemented and refactored most of microservices
         \item Planned, designed and delivered several features
