--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -48,7 +48,16 @@
 \section{Experience}
 %----------------------------------------------------------------------------
 \story{scala developer}
-      {\href{https://www.jit.team}{Jit Team} (under contract to Nordea Poland)}
+      {\href{https://www.epam.com}{Epam Systems} (under contract to \href{https://www.ubs.com}{UBS})}
+      {08.2020 - now\\Wrocław, Poland}
+      {scala, akka-http, cats,\\akka-streams, kafka,\\bash, gradle}
+      {Member of Next Generation Archive solution team. Delivering a system designed to store banking documents.
+        It is a typical CRUD web-based application build on the top of Hitachi database solution.
+        As a developer I was responsible for implementing new features, improvements, bug fixes, L3 support and doing code reviews.
+      }
+%----------------------------------------------------------------------------
+\story{scala developer}
+      {\href{https://www.jit.team}{Jit Team} (under contract to \href{https://www.nordea.com}{Nordea Poland})}
       {07.2019 - 05.2020\\Gdynia, Poland}
       {scala, cats, http4s,\\shapeless, tagless-final,\\fs2, bazel, nix, kafka,\\elasticsearch,\\microservices,\\kubernetes,\\postgres
       }
@@ -63,7 +72,7 @@
         \item Implemented and refactored most of microservices
         \item Planned, designed and delivered several features
         \end{missions}
-      }
+      }`
 %----------------------------------------------------------------------------
 \story{scala developer}
       {\href{https://www.intel.com/content/www/us/en/jobs/locations/poland.html}{Intel Technology Poland}}
