--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -47,9 +47,22 @@
 \begin{document}
 \section{Experience}
 %----------------------------------------------------------------------------
+\story{functional engineer}
+      {\href{https://www.tweag.io}{tweag.io}}
+      {10.2021 - now\\Remote}
+      {bazel, haskell, scala\\golang, akka-typed}
+      { Tweag is a software innovation lab from France gathering people around
+        functional programming (mostly \href{https://www.haskell.org}{haskell}) and modern
+        software distribution stack (\href{https://nixos.org}{nixos} \& \href{https://bazel.build}{bazel})
+        \begin{missions}
+          \item Contribution to \href{https://github.com/tweag/gazelle_cabal}{https://github.com/tweag/gazelle\_cabal}
+          \item Work for a \href{https://www.heb.com}{H-E-B} client (grocery retail from Texas)
+        \end{missions}
+      }
+%----------------------------------------------------------------------------
 \story{scala developer}
       {\href{https://www.epam.com}{Epam Systems} (under contract to \href{https://www.ubs.com}{UBS})}
-      {08.2020 - now\\Wrocław, Poland}
+      {08.2020 - 10.2021\\Wrocław, Poland}
       {scala, akka-http, cats,\\akka-streams, kafka,\\bash, gradle}
       {Member of Next Generation Archive solution team. Delivering a system designed to store banking documents.
         It is a typical CRUD web-based application build on the top of Hitachi database solution.
